[gd_scene load_steps=7 format=2]

[ext_resource path="res://CanvasLayer.gd" type="Script" id=1]
[ext_resource path="res://fonts/Retro Gaming.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 48
outline_size = 5
outline_color = Color( 0.486275, 0.305882, 0.733333, 1 )
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
size = 34
outline_size = 1
font_data = ExtResource( 2 )

[sub_resource type="ShortCut" id=4]

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -22.5
margin_right = 22.5
custom_fonts/font = SubResource( 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 1 )
text = "DODGE 
SHADOWS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -99.0
margin_top = -63.0
margin_right = 99.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0.866667, 0.768627, 0.768627, 1 )
custom_colors/font_color = Color( 0.768627, 0.54902, 0.760784, 1 )
custom_colors/font_color_hover = Color( 0.152941, 0.0823529, 0.0823529, 0.301961 )
custom_colors/font_color_pressed = Color( 0.403922, 0.203922, 0.203922, 0.713726 )
shortcut = SubResource( 4 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_Message_Timer_timeout"]
